# illiad

./: .env.example  .gitignore  NOTICE  README.md  app.py  illiad_launcher.py  pyproject.toml
docs/: SDD-illiad-desktop.md
services/search/: core.py  providers.py
src/: chroma_client.py  deep_research.py  llm_core.py  service_health.py  settings.py  tool_implementations.py
static/: index.html  login.html  style.css
static/js/: chat.js  cookbook-hwfit.js  cookbook.js  cookbookRunning.js  cookbookServe.js  emailLibrary.js  settings.js  slashCommands.js  theme.js
tests/: test_chroma_client.py  test_security_regressions.py
